# renamer

./: Cargo.toml  build.sh  config.toml  config_new.toml  libs  readme.md  rename.txt  settings.json  settings.toml  test.txt
src/: copy.rs  main.rs  menu.rs  progressbar.rs  settings.rs  zipper.rs
