[package]
name = "renamer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.138"
serde = {version = "1.0.217", features = ["derive"]}
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", default-features = false, features=["dates"]}
dialoguer = {version="*", features = ["fuzzy-select"]}
indicatif="0.17.11"
hashbrown= {version="0.15.2", features = [ "serde"]}
sevenz-rust={version="0.6.1"}
zip="2.2.2"